--- a/public/templates/ComposeMessage.html
+++ b/public/templates/ComposeMessage.html
@@ -112,7 +112,7 @@
           <ul class="dropdown-menu" role="menu">
             <li> <a href="Profile.html"> <i class="fa fa-user"></i> &nbsp;&nbsp;My Profile </a> </li>
             <li class="divider"></li>
-             <li> <a href="/dashboard/settings"> <i class="fa fa-cogs"></i> &nbsp;&nbsp;Settings </a> </li>
+             <li> <a href="settings.html"> <i class="fa fa-cogs"></i> &nbsp;&nbsp;Settings </a> </li>
             <li class="divider"></li>
             <li> <a href="#" onclick="this.childNodes[0].submit()">
               <form action="/logout" method="POST">
@@ -182,7 +182,7 @@
                   </div>
                 </div>
                 <div class=" row send-message-padding ">
-                  <div class="col-md-8 checkbox inline-block text-left">
+                  <div class=" checkbox inline-block text-left">
                     <li class="inline-block ui-tooltip">
                       <label>
                         <input type="radio" value="" >
@@ -191,15 +191,16 @@
                     <li class="inline-block">
                       <label>
                         <input type="radio" value="">
-                        <a class="ui-tooltip zindex10" data-toggle="tooltip"data-original-title="Edit or delete the mistakes before the recipients opens them">Mistake-free Message™</a> </label>
+                        <a class="ui-tooltip zindex10" data-toggle="tooltip"data-original-title="Edit or delete the mistakes before the recipients opens them">Mistake-Proof Message™</a> </label>
                     </li>
                   </div>
-                  <div class="col-md-4 inline-block">
+                  
+                </div>
+                <div class=" pull-right inline-block">
                     <button type="button" class="btn btn-primary btn-default" data-dismiss="modal">Cancel</button>
                     &nbsp;
                     <button type="submit" class="btn btn-primary btn-default">Send</button>
                   </div>
-                </div>
               </fieldset>
             </form>
           </div>
@@ -220,7 +221,7 @@
           </div>
           <div class="row padding-chat">
             <div class="col-xs-6 col-lg-4 coworker-image text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
-            <div class="col-xs-12 col-sm-6 col-lg-8"> <a class="coworker-name">Lizzel</a>
+            <div class="col-xs-12 col-sm-6 col-lg-8"> <a class="coworker-name" href="">Lizzel</a>
               <p class="coworker-title">Marketing Manager</p>
             </div>
           </div>
@@ -236,10 +237,12 @@
               <p class="coworker-title">Marketing Manager</p>
             </div>
           </div>
-          <a>See All Coworkers</a> </div>
+          <div class="text-center"><a >See All Coworkers</a></div> </div>
       </div>
     </div>
   </div>
+  
+   
 </div>
   
 
