--- a/public/templates/Profile.html
+++ b/public/templates/Profile.html
@@ -137,7 +137,7 @@
         <h4 class="title-heading text-center">My Profile</h4>
         <div class="stream-box">
           <div class=" pull-right valign-top"> <a href="editprofile.html"> Edit </a></div>
-          <h4 class="text-center"> personal information</h4>
+          <h4 class="text-center profile-title"> personal information</h4>
           <div> <b>My Photo:</b> <a></a></div>
           <div class="avatar-personal-info"> <img src="../themes/landing/img/avatars/avatar-1-lg.jpg" alt="Profile Avatar" width="130" height="136"> </div>
           <div> <b>about me:</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
@@ -147,7 +147,7 @@
         </div>
         <div class="stream-box">
           <div class=" pull-right valign-top"> <a href="editprofile.html"> Edit </a></div>
-          <h4 class="text-center">education</h4>
+          <h4 class="text-center profile-title">education</h4>
           <div> <b>from: &nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;&nbsp;to: </b> </div>
           <div> <b>school name:</b></div>
           <div> <b>degree/diploma:</b></div>
@@ -156,7 +156,7 @@
         </div>
         <div class="stream-box">
           <div class=" pull-right valign-top"> <a href="editprofile.html"> Edit </a></div>
-          <h4 class="text-center">contact infomation</b></h4>
+          <h4 class="text-center profile-title">contact infomation</b></h4>
           <div><b> work number:  &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;ext:</b></div>
           <div> <b>mobile number:</b></div>
           <div><b>other email addresses:</b></div>
@@ -164,14 +164,14 @@
         </div>
         <div class="stream-box">
           <div class=" pull-right valign-top"> <a href="editprofile.html"> Edit </a></div>
-          <h4 class="text-center"> company information</h4>
+          <h4 class="text-center profile-title"> company information</h4>
           <div> <b>job title: </b></div>
           <div> <b>department:</b></div>
           <div> <b>skills:</b></div>
         </div>
         <div class="stream-box">
           <div class=" pull-right valign-top"> <a href="editprofile.html"> Edit </a></div>
-          <h4 class="text-center">work experience</h4>
+          <h4 class="text-center profile-title">work experience</h4>
           <div> <b>from: &nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;&nbsp;to: </b> </div>
           <div> <b>company name:</b></div>
           <div> <b>job title:</b></div>
