--- a/public/templates/coworker-Profile.html
+++ b/public/templates/coworker-Profile.html
@@ -107,7 +107,7 @@
           <ul class="dropdown-menu" role="menu">
             <li> <a href="Profile.html"> <i class="fa fa-user"></i> &nbsp;&nbsp;My Profile </a> </li>
             <li class="divider"></li>
-            <li> <a href="/dashboard/settings"> <i class="fa fa-cogs"></i> &nbsp;&nbsp;Settings </a> </li>
+            <li> <a href="settings.html"> <i class="fa fa-cogs"></i> &nbsp;&nbsp;Settings </a> </li>
             <li class="divider"></li>
             <li> <a href="#" onclick="this.childNodes[0].submit()">
               <form action="/logout" method="POST">
@@ -141,7 +141,7 @@
         <p> <a class="btn btn-primary" href="javascript:;">Add as Friend</a> <a class="btn btn-primary" href="javascript:;">Send Message</a> </p>
         <hr>
         <div class="text-left">
-          <h4 class="text-center"> personal information</h4>
+          <h4 class="text-center profile-title"> personal information</h4>
           <div> <b>about me:</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.  consectetur adipisicing elit Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet, consectetur adipisicing elit Lorem ipsum dolor sit amet, consectetur adipisicing elit</div>
           <div><b> birthday:</b> 12/12/1912</div>
           <div> <b>relationship status:</b> Maried</div>
@@ -149,7 +149,7 @@
         </div>
         <hr>
        <div class="text-left">
-          <h4 class="text-center">education</h4>
+          <h4 class="text-center profile-title">education</h4>
           <div> <b>from: </b>2002 <b>&nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;&nbsp;to: </b>2004 </div>
           <div> <b>school name:</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
           <div> <b>degree/diploma:</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
@@ -157,7 +157,7 @@
         </div>
         <hr>
        <div class="text-left">
-          <h4 class="text-center">contact infomation</b></h4>
+          <h4 class="text-center profile-title">contact infomation</b></h4>
           <div><b> work number: 123434 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;ext:</b></div>
           <div> <b>mobile number:</b></div>
           <div><b>other email addresses:</b>This section or field will not show if the user let it blank</div>
@@ -165,14 +165,14 @@
         </div>
         <hr>
         <div class="text-left">
-          <h4 class="text-center"> company information</h4>
+          <h4 class="text-center profile-title"> company information</h4>
           <div> <b>job title:</b> This section or field will not show if the user let it blank </b></div>
           <div> <b>department:</b></div>
           <div> <b>skills:</b> This section or field will not show if the user let it blank</div>
         </div>
         <hr>
        <div class="text-left">
-          <h4 class="text-center">work experience</h4>
+          <h4 class="text-center profile-title">work experience</h4>
           <div> <b>from: &nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;&nbsp;to: </b> </div>
           <div> <b>company name:</b>This section or field will not show if the user let it blank</div>
           <div> <b>job title:</b>This section or field will not show if the user let it blank/div>
