--- a/public/templates/editprofile.html
+++ b/public/templates/editprofile.html
@@ -137,7 +137,7 @@
       <div class="col-md-9 col-sm-8 profile-line-height">
         <h4 class="title-heading text-center">My Profile</h4>
         <div class="stream-box">
-          <h4 class="text-center"> PERSONAL INFORMATION</h4>
+          <h4 class="text-center profile-title"> Personal Information</h4>
           <p class="padding-top"></p>
           <div class="tab-pane fade in active" id="profile-tab">
             <form id="profile_form"
@@ -203,7 +203,9 @@
                 </div>
                 <div class="form-group">
                   <div class="col-md-7 col-md-push-3 text-center">
-                    <button type="submit" class="btn btn-primary">Save Changes</button>
+                    <button type="submit" class="btn btn-primary"> 
+                  Save Changes
+                    </button>
                     &nbsp;
                     <button type="reset" class="btn btn-primary">Cancel</button>
                   </div>
@@ -213,7 +215,7 @@
           </div>
         </div>
         <div class="stream-box">
-          <h4 class="text-center">EDUCATION</h4>
+          <h4 class="text-center profile-title">Education</h4>
           <p class="padding-top"></p>
           <div class="tab-pane fade in active" id="profile-tab">
             <form id="profile_form"
@@ -286,7 +288,7 @@
           </div>
         </div>
         <div class="stream-box">
-          <h4 class="text-center">CONTACT INFORMATION</h4>
+          <h4 class="text-center profile-title ">Contact Information</h4>
           <p class="padding-top"></p>
           <div class="tab-pane fade in active" id="profile-tab">
             <form id="profile_form"
@@ -358,7 +360,7 @@
           </div>
         </div>
         <div class="stream-box">
-          <h4 class="text-center">WORK EXPERIENCE</h4>
+          <h4 class="text-center profile-title">Work Experience</h4>
           <p class="padding-top"></p>
           <div class="tab-pane fade in active" id="profile-tab">
             <form id="profile_form"
