--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -51,7 +51,7 @@
                     <nav class="collapse navbar-collapse" role="navigation">
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a href="/"><i class="fa fa-angle-double-left"></i> &nbsp;Back to Home</a>
+                                <a href="index.html"><i class="fa fa-angle-double-left"></i> &nbsp;Back to Home</a>
                             </li>
                         </ul>
                     </nav>
@@ -94,7 +94,7 @@
 
                     <div class="form-group clearfix">
                         <div class=" text-center">
-                            <small><a href="/forgot">Forgot Password?</a></small>
+                            <small><a href="pwchange.html">Forgot Password?</a></small>
                         </div>
                     </div>
               </fieldset>
@@ -104,7 +104,7 @@
         <div class="account-footer">
             <p>
                 Don't have an Account? &nbsp;
-                <a href="/signup">Create an Account!</a>
+                <a href="signup.html">Create an Account!</a>
             </p>
         </div>
     </div>
