--- a/public/templates/news.html
+++ b/public/templates/news.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>pricing</title>
+<title>Untitled Document</title>
+
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic" rel="stylesheet">
 <link href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet">
 <link href="../themes/landing/css/font-awesome.min.css" rel="stylesheet">
@@ -16,7 +17,9 @@
 <link href="/img/favicon.ico" rel="shortcut icon">
 <link href="../themes/landing/css/mvpready-landing-new-style.css" rel="stylesheet">
 </head>
-
+<script type="text/javascript">var switchTo5x=true;</script>
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "2de12c54-8917-4ec4-910f-9fc458996369", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 <body>
 <!--header-->
 <header class="navbar navbar-inverse" role="banner">
@@ -37,106 +40,69 @@
 </header>
 <!--end header-->
 
-<div class="why-choose360notion-bg">
-  <div >
-    <div class="container masthead-text-title">
-      <h1 class="masthead-subtitle text-center "> <b class="masthead-title-big">pricing</b> </h1>
-    </div>
-  </div>
-  <div class="content">
-    <div class="container">
-      <div class="text-center">
-        <h2>Start your 14-day free trial today!</h2>
-        <h4>No hidden costs, no long-term contracts, cancel anytime</h4>
-        <br>
-        <br>
-        <br>
-        <br>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 col-md-10 col-md-offset-1">
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="pricing-plan">
-                <div class="pricing-header">
-                  <h3 class="pricing-plan-title">Starter</h3>
-                  <p class="pricing-plan-label">For Startups</p>
-                </div>
-                <div class="pricing-plan-price"> <span class="pricing-plan-amount">$0</span> mo. / member </div>
-                <ul class="pricing-plan-details">
-                  <li><strong>3</strong> Members max.</li>
-                  <li><strong>15 MB</strong> Storage Limit</li>
-                </ul>
-                <a href="/signup" class="btn btn-primary">Choose Plan</a> </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="pricing-plan">
-                <div class="pricing-plan-ribbon-secondary ui-tooltip" title="" data-original-title="Best Value!"> <i class="fa fa-star"></i> </div>
-                <div class="pricing-header">
-                  <h3 class="pricing-plan-title">Mega</h3>
-                  <p class="pricing-plan-label">For Small/Medium Size Companies</p>
-                </div>
-                <div class="pricing-plan-price"> <span class="pricing-plan-amount">$30</span> mo. / member </div>
-                <ul class="pricing-plan-details">
-                  <li><strong>3 to 50</strong> Members</li>
-                  <li><strong>Unlimited Storage</strong> </li>
-                </ul>
-                <a href="/signup" class="btn btn-primary">Choose Plan</a> </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="pricing-plan">
-                <div class="pricing-header">
-                  <h3 class="pricing-plan-title">Premium</h3>
-                  <p class="pricing-plan-label">For Large Companies</p>
-                </div>
-                <div class="pricing-plan-price"> <span class="pricing-plan-amount">$25</span> mo. / member </div>
-                <ul class="pricing-plan-details">
-                  <li><strong>51</strong> Members or more</li>
-                  <li><strong>Unlimited Storage</strong> </li>
-                </ul>
-                <a href="/signup" class="btn btn-primary">Choose Plan</a> </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <div class="row text-center">
-        <div class="col-md-12">
-          <h3 class="content-title title-size text-center" > <span>All Starter, Mega and Premium Plans Come With</span> </h3>
-        </div>
-        <div class="col-md-4 feature-text" >
-          <ul class="icons-list">
-            <li><i  class="icon-li fa fa-check-square text-primary text-primary"></i> Personal and Business Profiles
-</li>
-            <li><i  class="icon-li fa fa-check-square text-primary text-primary"></i> Chat Messaging</li>
-             <li><i  class="icon-li fa fa-check-square text-primary"></i> Internal File Sharing and Storage</li>
-          </ul>
-        </div>
-        <div class="col-md-4 feature-text">
-          <ul class="icons-list">
-           
-            <li><i  class="icon-li fa fa-check-square text-primary"></i> 360-Degree Feedback Wizard</li>
-                      <li><i  class="icon-li fa fa-check-square text-primary"></i>Mistake-Proof” Messaging™</li>
-            <li><i  class="icon-li fa fa-check-square text-primary"></i> “Snap” Messaging</li>
-          </ul>
-        </div>
-        <div class="col-md-4 feature-text">
-          <ul class="icons-list">
-<li><i  class="icon-li fa fa-check-square text-primary"></i> Fast Customer Service</li>
-            <li><i  class="icon-li fa fa-check-square text-primary"></i> Admin control over your network</li>
-            <li><i  class="icon-li fa fa-check-square text-primary"></i> Technical Support</li>
-          </ul>
-        </div>
-       
-      </div>
-    </div>
-  </div>
-</div>
-<!--footer-->
+  <div class="why-choose360notion-bg">
+	
+    <div class="content">
+        <div class="container">
+          <div class="col-md-8">
+          <h2>Blog title</h2>
+<hr>          
 
+<div>
+
+<div class="blog-social-share"> Posted by <a>admin</a>&nbsp;&nbsp; <b> Share this post</b><span class='st_pinterest_hcount' displayText='Pinterest'></span>
+<span class='st_facebook_hcount' displayText='Facebook'></span>
+<span class='st_twitter_hcount' displayText='Tweet'></span>
+<span class='st_tumblr_hcount' displayText='Tumblr'></span>
+<span class='st_email_hcount' displayText='Email'></span>
+                             </div> 
+ 
+</div>
+  <hr> 
+
+
+  <DIV>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng] velit, sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?
+
+[33] At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat…</DIV>    
+          </div>
+          <div class="col-md-4"> <div ><div class="blog-box "> <h2 class="text-center">Get updates straight from 360notion™</h2>
+Are you on the list? Enter your email address to receive new weekly email updates on 360notion™.
+<p class="padding-top"></p>
+<form id="subscribe_form" action="/subscribe" method="POST" class="form padding-top" role="form">
+                                    <fieldset>
+                                        <div class="form-group text-center">
+                                            <input type="text"
+                                                class="form-control validate[required,custom[email]]"
+                                                id="newsletter_email"
+                                                name="newsletter_email"
+                                                placeholder="What is your email address?">
+                                        </div>
+
+                                        <div class="form-group text-center">
+                                            <a type="submit" class="btn btn-primary blog-subcribe">Subscribe Now</a>
+                                        </div>
+                                    </fieldset>
+                                </form></div>
+<div class="blog-box"> <h2 class="text-center">Recent Posts</h2>
+<b>At vero eos et accusamus et iusto odio dignissimos ducimus, </b><i class="time"> 2-10-1014</i>
+<br><b>At vero eos et accusamus et iusto odio dignissimos ducimus, </b><i class="time"> 2-10-1014</i></br>
+<br><b>At vero eos et accusamus et iusto odio dignissimos ducimus, </b><i class="time"> 2-10-1014</i></br>
+<br><b>At vero eos et accusamus et iusto odio dignissimos ducimus, </b><i class="time"> 2-10-1014</i></br>
+
+
+</div>
+<div class="blog-box"> <h2 class="text-center">Popular Topics</h2>
+<b>At vero eos et accusamus et ius<b>
+
+</div>
+
+
+</div>
+        </div>
+    </div>
+  </div>
+    <!--footer-->
+    
          <footer class="footer">
                 <div class="container">
                     <div class="row">
@@ -274,25 +240,27 @@
         </footer>
         
             
+ <!-- Bootstrap core JavaScript  -->
+        <script type="text/javascript" src="../themes/landing/js/libs/jquery-1.10.2.js"></script>
+        <script type="text/javascript" src="../themes/landing/js/libs/bootstrap.js"></script>
 
-<!-- Bootstrap core JavaScript  --> 
-<script type="text/javascript" src="../themes/landing/js/libs/jquery-1.10.2.js"></script> 
-<script type="text/javascript" src="../themes/landing/js/libs/bootstrap.js"></script> 
-<script type="text/javascript" src="../themes/landing/js/plugins/timeago/jquery.timeago.js"></script> 
+        <script type="text/javascript" src="../themes/landing/js/plugins/timeago/jquery.timeago.js"></script>
 
-<!--[if lt IE 9]>
+        <!--[if lt IE 9]>
             <script type="text/javascript" src="../themes/landing/js/libs/excanvas.compiled.js"></script>
-        <![endif]--> 
+        <![endif]-->
 
-<!-- Validation JS --> 
-<script type="text/javascript" src="../js/jquery.validationEngine-en.js"></script> 
-<script type="text/javascript" src="../js/jquery.validationEngine.js"></script> 
+        <!-- Validation JS -->
+        <script type="text/javascript" src="../js/jquery.validationEngine-en.js"></script>
+        <script type="text/javascript" src="../js/jquery.validationEngine.js"></script>
 
-<!-- Alertify JS --> 
-<script type="text/javascript" src="../js/alertify.js"></script> 
+        <!-- Alertify JS -->
+        <script type="text/javascript" src="../js/alertify.js"></script>
 
-<!-- App JS --> 
-<script type="text/javascript" src="../themes/landing/js/mvpready-core.js"></script> 
-<script type="text/javascript" src="../themes/landing/js/mvpready-landing.js"></script>
+        <!-- App JS -->
+        <script type="text/javascript" src="../themes/landing/js/mvpready-core.js"></script>
+        <script type="text/javascript" src="../themes/landing/js/mvpready-landing.js"></script>
 </body>
+
+    
 </html>
