--- a/public/templates/settings.html
+++ b/public/templates/settings.html
@@ -101,12 +101,12 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown navbar-profile"> <a class="padding-top-home" href="/dashboard">Home</a> </li>
+        <li class="dropdown navbar-profile"> <a class="padding-top-home" href="Activity Stream.html">Home</a> </li>
         <li class="dropdown navbar-profile"> <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:;"> <img src="../themes/landing/img/avatars/avatar-1-xs.jpg" class="navbar-profile-avatar" alt="Profile Picture"> <span class="navbar-profile-label">rod@rod.me &nbsp;</span> <i class="fa fa-caret-down"></i> </a>
           <ul class="dropdown-menu" role="menu">
             <li> <a href="Profile.html"> <i class="fa fa-user"></i> &nbsp;&nbsp;My Profile </a> </li>
             <li class="divider"></li>
-            <li> <a href="/dashboard/settings"> <i class="fa fa-cogs"></i> &nbsp;&nbsp;Settings </a> </li>
+            <li> <a href="settings.html"> <i class="fa fa-cogs"></i> &nbsp;&nbsp;Settings </a> </li>
             <li class="divider"></li>
             <li> <a href="#" onclick="this.childNodes[0].submit()">
               <form action="/logout" method="POST">
@@ -171,7 +171,7 @@
         
       
         <div class="stream-box">
-          <h3 class=" text-center"> Notification Settings </h3>
+          <h3 class=" text-center"> Receive Notifications </h3>
           <br>
           <form class="form-horizontal" action="./page-settings.html">
           <div class="padding"><b> what do you want to receive notifications on?</b> </div>
@@ -179,12 +179,12 @@
             <div class="checkbox padding">
               <label>
                 <input type="checkbox" checked="" value="">
-                activities that involve me </label>
+                mentions you in an activity</label>
             </div>
             <div class="checkbox padding">
               <label>
                 <input type="checkbox" checked="" value="">
-                new messages </label>
+                sends you a new message</label>
             </div>
             <div class="checkbox padding">
               <label>
@@ -192,17 +192,18 @@
                 received new files </label>
             </div>
           </div>
-          <div class="padding"><b>how do you want to receive notifications?</b></div>
+          <div class="padding"><b>show notifications
+</b></div>
           <div class="text-center">
             <div class="checkbox">
               <label>
                 <input type="checkbox" checked="" value="">
-                on the 360notion™ dashboard </label>
+                360notion™ dashboard </label>
             </div>
             <div class="checkbox">
               <label>
                 <input type="checkbox" value="">
-                alerts on your mobile phone </label>
+            phone </label>
             </div>
           </div>
           <div class="form-group text-center padding">
@@ -215,45 +216,46 @@
         </div>
         
          <div class="stream-box">
-          <h3 class=" text-center"> Alert Settings </h3>
+          <h3 class=" text-center"> Receive Alerts</h3>
           <br>
           <form class="form-horizontal" action="./page-settings.html">
-          <div class="padding"><b> what do you want to receive an alert?</b> </div>
+          <div class="padding"><b>get alerts on my 360notion™ and phone when someone</b> </div>
           <div class="text-center">
             <div class="checkbox padding">
               <label>
                 <input type="checkbox" checked="" value="">
-                change in Relationship status</label>
+             adds or removes a job skill</label>
             </div>
             <div class="checkbox padding">
               <label>
                 <input type="checkbox" checked="" value="">
-                change in job title </label>
+              changes a job title</label>
             </div>
             <div class="checkbox padding">
               <label>
                 <input type="checkbox" value="">
-                change in department </label>
+                changes a relationship status</label>
                  </label>
             </div>
              <div class="checkbox padding">
               <label>
               
                 <input type="checkbox" value="">
-                change in skills </label>
+                moves to a new department</label>
             </div>
           </div>
-          <div class="padding"><b>how do you want to receive alerts?</b></div>
+          <div class="padding"><b>show notifications
+</b></div>
           <div class="text-center">
             <div class="checkbox">
               <label>
                 <input type="checkbox" checked="" value="">
-                on the 360notion™ dashboard </label>
+               360notion™ Dashboard </label>
             </div>
             <div class="checkbox">
               <label>
                 <input type="checkbox" value="">
-                alerts on your mobile phone </label>
+                phone </label>
             </div>
           </div>
           <div class="form-group text-center padding">
