--- a/public/templates/checkout-cont.html
+++ b/public/templates/checkout-cont.html
@@ -39,20 +39,35 @@
 
 <div class="why-choose360notion-bg">
 <div class="container masthead-text-title">
-  <h1 class="masthead-subtitle  title-size text-center"> <b class="masthead-title-big"> checkout </b> </h1>
+  <h1 class="masthead-subtitle  title-size text-center"> <b class="masthead-title-big"> thank you! </b> </h1>
 </div>
 <div class="content">
   <div class="container">
-    <div class="row">
-   
-        <h3 class="text-center"> Order Information</h3>
+  
       
-    </div>
-    <p class="row-divider"></p>
-    <table  id="table-1" class="table table-striped table-bordered dataTable" aria-describedby="table-1_info">
+    <h5 class="text-center"> <p> You made a wise choice purchasing a Mega Plan for your company. </p>
+      <p>We will not charge your card for 14 days. Please print or save a copy of this invoice for your records.</p>
+    </h5>
+   <br></br> 
+   <h3 class="text-center">My Invoice</h3>
+
+  <div class="text-center">   
+<p><b>Date:</b> Oct 10, 2014       
+10:30 AM	</p>		 
+
+  <p> <b>Transaction ID:</b>#invoicenumber </p>
+  <hr>
+   <p> <b>Full Name:</b> David Harison </p>
+      <p> <b>Company Name:</b> your company name </p>
+        <p> <b>Billing Address:</b> loremsit amet </p>
+          <p> <b>Card Number:</b>******336 </p>
+            <p> <b>Amount Paid:</b>$600 </p>
+    <hr>
+   </div>
+      <table  id="table-1" class="table table-striped table-bordered dataTable" aria-describedby="table-1_info">
       <thead>
         <tr>
-          <th scope="col"><span >Order Detail</span></th>
+          <th scope="col"><span >My Order</span></th>
           <th scope="col"><span >Number of Members</span></th>
          
           <th><span>Month/Member</span></th>
@@ -65,148 +80,16 @@
   </b> (
             3-50 Members, 
             Unlimited Storage Limit)</td>
-          <td><span id="">
-            <input name="" value="0" size="5" type="text">
-            </span></td>
+          <td>20</td>
           <td scope="row">$ 30.00</td>
-          <td scope="row"><span id="">$ 00.00</span></td>
+          <td scope="row"><span id="">$ 600.00</span></td>
           
         </tr>
       </tbody>
-    </table>
- 
-<div>
- 
-   <b>Promotional Code</b>
-
-</div>
-
-  <div class="row-divider">
-    <input id="name" class="form-control promontion-code" type="text" data-required="true" name="name">  <a class="btn btn-primary padding-top">Apply</a>
-   <p></p>
-     </div>
-
-
-
-    <p class="row-divider"></p>
-    <div class="row text-center">
-      <h3>Enter Your Billing Information</h3>
-     <p> 360notion.com accepts all major credit & debit cards. All payments are secure with 256-bit encryption.</br> If you have any questions, please contact customer service at admin@myabuy.com</p>
-
-   <br></br> 
-    <div class="col-xs-6 "><div class=" billing-form">
-<div class="form-group">
-  <label for="name">Name On Card:</label>
-  <input id="name" class="form-control " type="text" data-required="true" name="name">
-</div>
-
-
-
-<div class="form-group">
-  <label for="name">Billing Address 1:</label>
-  <textarea id="textarea-input" class="form-control " rows="2" cols="10" name="textarea-input" data-minlength="5" data-required="true"></textarea>
-
-</div>
-<div class="form-group">
-  <label for="name">Billing Address 2:</label>
-<textarea id="textarea-input" class="form-control " rows="2" cols="10" name="textarea-input" data-minlength="5" data-required="true"></textarea>
-
-</div>
-<div class="form-group">
-  <label for="name">City</label>
-  <input id="name" class="form-control " type="text" data-required="true" name="name">
-
-</div>
-
-<div class="form-group">
-  <label for="name">Zip/Postal Code:</label>
-  <input id="name" class="form-control " type="text" data-required="true" name="name">
-
-</div>
-<div class="form-group">
-  <label for="name">Country:</label>
-  <select id="validateSelect" class="form-control parsley-validated" data-required="true" name="validateSelect">
-<option value="">Please Select</option>
-<option value="1">1</option>
-<option value="2">2</option>
-<option value="3">3</option>
-<option value="4">4</option>
-<option value="5">5</option>
-<option value="6">6</option>
-</select>
-
-</div>
-</div></div>
-    
-    <div class="col-xs-6 padding-top ">
-    <div class="billing-form">
-    
-    <div class="form-group">
-  <label for="name">Choose Credit Card:</label>
-<select id="validateSelect" class="form-control parsley-validated" data-required="true" name="validateSelect">
-<option value="">Please Select</option>
-<option value="1">Visa</option>
-<option value="2">MasterCard</option>
-<option value="3">American Express</option>
-<option value="4">Diners Club</option>
-<option value="5">JCB and Discover</option>
-</select> <img src="https://www.merchantequip.com/image/?logos=v|m|a|d|jcb|dc&height=32" alt="Merchant Equipment Store Credit Card Logos" />
-</div>
-<div class="form-group">
-  <label for="name">Card Number:</label>
-  <input id="name" class="form-control " type="text" data-required="true" name="name">
-
-</div>
-<div class="form-group">
-  <label for="name">Expiration Date:</label>
-<p>
-<select id="validateSelect" class="form-control date-form" data-required="true" name="validateSelect">
-<option value="">1</option>
-<option value="1">2  </option>
-<option value="2">3</option>
-<option value="3">4</option>
-<option value="4">5</option>
-<option value="5">5</option>
-<option value="5">6</option>
-<option value="5">7</option>
-<option value="5">8</option>
-<option value="5">9</option>
-</select>
-<select id="validateSelect" class="form-control date-form" data-required="true" name="validateSelect">
-<option value="">2014</option>
-<option value="1">2015  </option>
-<option value="2">2016</option>
-<option value="3">2017</option>
-<option value="4">2018</option>
-<option value="5">2019</option>
-
-</select> </p>
-
-</div>
-<div class="form-group">
-  <label for="name">Security Code (CSC): <i class="fa fa-question-circle demo-element ui-tooltip text-left" title="" data-placement="right" data-toggle="tooltip" type="button" data-original-title="For Visa®, MasterCard® and Diners Club® the Security Code is the three-digit code located at the back of the card.  For JCB® the Security Code is the seven-digit code at the back of the card. For American Express® the Security Code is the four-digit code located at the front of the card."></i> </label>
-  <input id="name" class="form-control " type="text" data-required="true" name="name">
- 
-</div>
-<div class="form-group">
- <div class="form-group">
-                        <a href="checkout-cont.html" type="submit" class="btn btn-primary btn-jumbo">Continue Checkout</a>
-                      </div>
-                      
-                      <!-- Begin DigiCert site seal HTML and JavaScript -->
-<div id="DigiCertClickID_IoDwFwRX" data-language="en_US" class=" text-center padding-top">
-	<a href="http://www.digicert.com/ssl-certificate.htm"><img src="http://seal.digicert.com/seals/cascade/?s=_lfC4Ai8,11,m,www.digicert.com " alt="SSL Certificate"></a>
-</div>
-<script type="text/javascript">
-var __dcid = __dcid || [];__dcid.push(["DigiCertClickID_IoDwFwRX", "5", "l", "white", "IoDwFwRX"]);(function(){var cid=document.createElement("script");cid.async=true;cid.src="//seal.digicert.com/seals/cascade/seal.min.js";var s = document.getElementsByTagName("script");var ls = s[(s.length - 1)];ls.parentNode.insertBefore(cid, ls.nextSibling);}());
-</script>
-<!-- End DigiCert site seal HTML and JavaScript -->
-                      
-</div>
-
-
+    </table> 
     </div>
-    </div>
+    
+      </div>
     </div>
   </div>
 </div>
@@ -260,7 +143,7 @@ var __dcid = __dcid || [];__dcid.push(["DigiCertClickID_IoDwFwRX", "5", "l", "wh
                                                 placeholder="Email Address">
               </div>
               <div class="form-group text-center">
-                <button type="submit" class="btn btn-transparent">Notify Me</button>
+                <button type="submit" class="btn btn-transparent">Notify me</button>
               </div>
             </fieldset>
           </form>
