--- a/public/templates/features.html
+++ b/public/templates/features.html
@@ -21,41 +21,21 @@
 <body>
 <!--header-->
 <header class="navbar navbar-inverse" role="banner">
-                    <div class="container">
-                        <div class="navbar-header">
-                            <a href="/" class="navbar-brand navbar-brand-img">
-                                 <img src="../themes/landing/img/logo.png" alt="Logo">
-                            </a>
-                            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-                                <span class="sr-only">Toggle navigation</span>
-                                <i class="fa fa-bars"></i>
-                            </button>
-                        </div>
-
-                        <nav class="collapse navbar-collapse" role="navigation">
-                            <ul class="nav navbar-nav navbar-right mainnav-menu">
-                                <li {@eq key="/" value="{url}"}class="active"{/eq}>
-                                    <a href="/">Home</a>
-                                </li>
-                                <li {@eq key="/features" value="{url}"}class="active"{/eq}>
-                                    <a href="/features">Features</a>
-                                </li>
-                                <li {@eq key="/faq" value="{url}"}class="active"{/eq}>
-                                    <a href="/faq">FAQ</a>
-                                </li>
-                                <li {@eq key="/pricing" value="{url}"}class="active"{/eq}>
-                                    <a href="/pricing">Pricing</a>
-                                </li>   
-                              
-                                <li {@eq key="/login" value="{url}"}class="active"{/eq}>
-                                    <a href="/login">Sign In</a>
-                                </li>
-                            </ul>
-
-                        
-                        </nav>
-                    </div>
-                </header>
+  <div class="container">
+    <div class="navbar-header"> <a href="/" class="navbar-brand navbar-brand-img"> <img src="../themes/landing/img/logo.png" alt="Logo"> </a>
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <i class="fa fa-bars"></i> </button>
+    </div>
+    <nav class="collapse navbar-collapse" role="navigation">
+      <ul class="nav navbar-nav navbar-right mainnav-menu">
+        <li {@eq key="/" value="{url}"}class="active"{/eq}> <a href="index.html">Home</a> </li>
+        <li {@eq key="/features" value="{url}"}class="active"{/eq}> <a href="features.html">Features</a> </li>
+        <li {@eq key="/faq" value="{url}"}class="active"{/eq}> <a href="faq.html">FAQ</a> </li>
+        <li {@eq key="/pricing" value="{url}"}class="active"{/eq}> <a href="pricing.html">Pricing</a> </li>
+        <li {@eq key="/login" value="{url}"}class="active"{/eq}> <a href="login.html">Sign In</a> </li>
+      </ul>
+    </nav>
+  </div>
+</header>
 <!--end header-->
 
   <div class="why-choose360notion-bg">
