--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -26,11 +26,11 @@
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav navbar-right mainnav-menu">
-        <li {@eq key="/" value="{url}"}class="active"{/eq}> <a href="/">Home</a> </li>
-        <li {@eq key="/features" value="{url}"}class="active"{/eq}> <a href="/features">Features</a> </li>
-        <li {@eq key="/faq" value="{url}"}class="active"{/eq}> <a href="/faq">FAQ</a> </li>
-        <li {@eq key="/pricing" value="{url}"}class="active"{/eq}> <a href="/pricing">Pricing</a> </li>
-        <li {@eq key="/login" value="{url}"}class="active"{/eq}> <a href="/login">Sign In</a> </li>
+        <li {@eq key="/" value="{url}"}class="active"{/eq}> <a href="index.html">Home</a> </li>
+        <li {@eq key="/features" value="{url}"}class="active"{/eq}> <a href="features.html">Features</a> </li>
+        <li {@eq key="/faq" value="{url}"}class="active"{/eq}> <a href="faq.html">FAQ</a> </li>
+        <li {@eq key="/pricing" value="{url}"}class="active"{/eq}> <a href="pricing.html">Pricing</a> </li>
+        <li {@eq key="/login" value="{url}"}class="active"{/eq}> <a href="login.html">Sign In</a> </li>
       </ul>
     </nav>
   </div>
