--- a/public/themes/admin/css/mvpready-admin.css
+++ b/public/themes/admin/css/mvpready-admin.css
@@ -215,6 +215,8 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	background-image: none;
 }
 .btn-primary {
+	font-size:18px;
+
 	color: #fff;
 	background-color: #666634;
 	border-color: #4d4d28;
@@ -2567,7 +2569,7 @@ form .required:after {
 }
 .sign-in-up {
 	text-align: center;
-	width: 70%;
+	width: 100%;
 	height: 46px;
 	font-size: 20px;
 	margin: auto;
@@ -2795,7 +2797,7 @@ a:hover, a:focus {
 	top: 20px;
 	position: absolute;
 	font-size: 20px;
-	right: 10px;
+	right: 15px;
 }
 .progress-bar-padding {
 	padding-left: 15p;
@@ -2918,3 +2920,24 @@ color:#212121;font-weight:bold;opacity:70%;
 	padding: 1px;
 	width: 50px;
 }
+.profile-title{ text-transform:capitalize; font-size:24px;}
+.chat-container{ max-width:500px;}
+.chat-box-top
+{ border: 1px solid #e3e3e3; border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+	background-color:#4b473a;
+    border-color: #ddd;
+	color:#FFF;
+	height:40px; padding:5px;}
+.chat-box
+{  background-color: #f5f5f5;
+	
+	background-color: #f5f5f5;
+	border: 1px solid #e3e3e3;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+.chat-box-message-odd{ background-color:#FFF; padding: 15px; }
+.chat-box-message-even{ background-color: #f5f5f5; padding: 15px; }
+.chat-box-compose{position: relative; padding:5px; }
+.chat-box-buttons a, chat-box-buttons a:hover, chat-box-buttons.active, chat-box-buttons:focus { color:#FFF; }
