--- a/public/themes/landing/css/mvpready-landing-new-style.css
+++ b/public/themes/landing/css/mvpready-landing-new-style.css
@@ -1746,6 +1746,27 @@ a.footer-link:hover, a.footer-link:focus {
 	width: 33.33333333333333%;
 }
 }
+/* !blog*/
+/* ----------------------------------------------- */
+.blog-box {
+	padding: 15px;
+	margin-top: 15px;
+	background-color: #f5f5f5;
+	border: 1px solid #e3e3e3;
+	border-radius: 4px;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+}
+.time
+{ font-style:italic;
+font-size:12px; color:#666634;}
+.blog-social-share  span{ min-height:22px;}
+.blog-subcribe{
+	text-align: center;
+	width: 100%;
+	height: 46px;
+	font-size: 18px;
+	margin: auto;
+}
 /* !Clients List */
 /* ----------------------------------------------- */
 .clients-list {
